# phaedra

./: .cirrus.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  PRIVACY.md  README-DISTRO-MAINTAINER.md  README.md  knight.md
assets/: wezterm.appdata.xml  wezterm.desktop
assets/icon/: update.sh
assets/shader-examples/: bloom.wgsl  digital-rain.wgsl  passthrough.wgsl  retro-crt.wgsl  scanlines.wgsl  vignette.wgsl
assets/shell-integration/: wezterm.sh
async_ossl/: Cargo.toml
base91/: Cargo.toml
bidi/: Cargo.toml  README.md
bidi/examples/: shaping.rs
bidi/src/: lib.rs
bidi/tests/: conformance.rs
bintree/: Cargo.toml
ci/: add-color-screen-shots.sh  appimage.sh  build-docs.sh  check-rust-version.sh  deploy.sh  flatpak.sh  make-color-screen-shots.sh  make-flathub-pr.sh  make-winget-pr.sh  source-archive.sh  update-derived-files.sh  wezterm-homebrew-macos.rb.template
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/derive/src/: attr.rs
config/src/: background.rs  bell.rs  cache_config.rs  cell.rs  color.rs  color_config.rs  config.rs  cursor.rs  daemon.rs  domain_config.rs  exec_domain.rs  font.rs  font_config.rs  frontend.rs  gpu_config.rs  key_input_config.rs  keyassignment.rs  keys.rs  launch_config.rs  lib.rs  lua.rs  meta.rs  mouse_config.rs  mux_config.rs  observers.rs  runtime_config.rs  scheme_data.rs  scroll.rs  serial.rs  ssh.rs  tab_bar.rs  terminal.rs  terminal_feature_config.rs  text_config.rs  tls.rs  units.rs  unix.rs  update_check.rs  version.rs  window.rs  (+2 more)
docs/: book.toml  changelog.md  contributing.md  copymode.md  escape-sequences.md  faq.md  features.md  help.md  hyperlinks.md  imgcat.md  index.md  installation.md  mkdocs-base.yml  multiplexing.md  quickselect.md  scrollback.md  serial.md  shell-integration.md  sponsor.md  ssh.md  troubleshooting.md  what-is-a-terminal.md
docs/architecture/: functional.md  render-hylomorphism.md  roadmap-spring-2026.md
docs/cli/: connect.md  general.md  imgcat.md  ls-fonts.md  record.md  replay.md  serial.md  set-working-directory.md  show-keys.md  ssh.md  start.md
docs/config/: appearance.md  default-keys.md  files.md  font-shaping.md  fonts.md  key-encoding.md  key-tables.md  keyboard-concepts.md  keys.md  launch.md  mouse.md  plugins.md
docs/install/: freebsd.md  linux.md  macos.md  netbsd.md  source.md  windows.md
docs/recipes/: hyperlinks.md  passing-data.md  workspaces.md
env-bootstrap/: Cargo.toml
env-bootstrap/src/: lib.rs  ringlog.rs
filedescriptor/: Cargo.toml
licenses/: README.md
lua-api-crates/: README.md
lua-api-crates/battery/: Cargo.toml
lua-api-crates/color-funcs/: Cargo.toml
lua-api-crates/mux/: Cargo.toml
lua-api-crates/plugin/: Cargo.toml
lua-api-crates/procinfo-funcs/: Cargo.toml
lua-api-crates/serde-funcs/: Cargo.toml
lua-api-crates/share-data/: Cargo.toml
lua-api-crates/spawn-funcs/: Cargo.toml
lua-api-crates/ssh-funcs/: Cargo.toml
lua-api-crates/termwiz-funcs/: Cargo.toml
lua-api-crates/time-funcs/: Cargo.toml
lua-api-crates/url-funcs/: Cargo.toml
lua-api-crates/window-funcs/: Cargo.toml
luahelper/: Cargo.toml
luahelper/src/: enumctor.rs  lib.rs
mux/: Cargo.toml
mux/src/: client.rs  connui.rs  domain.rs  lib.rs  localpane.rs  pane.rs  renderable.rs  ssh.rs  ssh_agent.rs  tab.rs  termwiztermtab.rs  tmux.rs  tmux_commands.rs  window.rs
nix/: flake.nix
phaedra/: Cargo.toml
phaedra-blob-leases/: Cargo.toml
phaedra-blob-leases/src/: simple_tempdir.rs
phaedra-cell/: Cargo.toml
phaedra-cell/src/: color.rs  image.rs  lib.rs
phaedra-char-props/: Cargo.toml
phaedra-char-props/codegen/: Cargo.toml
phaedra-client/: Cargo.toml
phaedra-client/src/: client.rs  discovery.rs  domain.rs
phaedra-dynamic/: Cargo.toml
phaedra-dynamic/derive/: Cargo.toml
phaedra-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
phaedra-dynamic/src/: lib.rs
phaedra-dynamic/tests/: fromdynamic.rs  todynamic.rs
phaedra-escape-parser/: Cargo.toml
phaedra-escape-parser/src/: color.rs  csi.rs  error.rs  hyperlink.rs  lib.rs  osc.rs
phaedra-font/: Cargo.toml
phaedra-gui/: Cargo.toml  build.rs
phaedra-gui-subcommands/: Cargo.toml
phaedra-hash-cons/: Cargo.toml
phaedra-input-types/: Cargo.toml
phaedra-input-types/src/: lib.rs
phaedra-mux-server/: Cargo.toml
phaedra-mux-server-impl/: Cargo.toml
phaedra-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  sessionhandler.rs
phaedra-mux-server/src/: daemonize.rs  main.rs  ossl.rs
phaedra-open-url/: Cargo.toml
phaedra-render-command/: Cargo.toml
phaedra-render-command/src/: lib.rs
phaedra-ssh/: Cargo.toml
phaedra-surface/: Cargo.toml
phaedra-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
phaedra-surface/src/line/: cellref.rs  clusterline.rs  line.rs  linebits.rs  test.rs  vecstorage.rs
phaedra-toast-notification/: Cargo.toml
phaedra-uds/: Cargo.toml
phaedra-unicode-data/: Cargo.toml
phaedra-version/: Cargo.toml  build.rs
phaedra/src/: main.rs  (+1 more)
procinfo/: Cargo.toml
promise/: Cargo.toml
pty/: Cargo.toml
rangeset/: Cargo.toml
ratelim/: Cargo.toml
strip-ansi-escapes/: Cargo.toml
sync-color-schemes/: Cargo.toml
tabout/: Cargo.toml
term/: Cargo.toml  README.md
term/src/: color.rs  config.rs  effects.rs  input.rs  lib.rs  screen.rs  terminal.rs
term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
term/src/test/: mod.rs
termwiz/: CHANGELOG.md  Cargo.toml
test-data/: extract-x11-icon.sh
umask/: Cargo.toml
vtparse/: Cargo.toml
window/: Cargo.toml
window/examples/: async.rs
window/src/: lib.rs
window/src/bitmaps/: mod.rs
window/src/os/: parameters.rs  x_and_wayland.rs
window/src/os/macos/: app.rs  connection.rs  keycodes.rs  menu.rs  window.rs
window/src/os/wayland/: connection.rs  frame.rs  inputhandler.rs  pointer.rs  window.rs
window/src/os/windows/: connection.rs  keycodes.rs  mod.rs  window.rs
window/src/os/x11/: connection.rs  keyboard.rs  window.rs
(+514 files in other folders)
