[package]
authors = ["Wez Furlong"]
name = "phaedra-cell"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/PaleRoses/phaedra"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/phaedra-cell"
keywords = ["terminal", "cell"]

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
phaedra-blob-leases = {workspace = true, optional=true}
phaedra-char-props.workspace = true
phaedra-color-types.workspace = true
phaedra-escape-parser.workspace = true
phaedra-dynamic.workspace = true

[features]
std = ["serde/std", "phaedra-char-props/std", "phaedra-color-types/std", "phaedra-escape-parser/std", "phaedra-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "phaedra-color-types/use_serde"]
use_image = ["dep:image", "dep:phaedra-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]

