[package]
authors = ["PaleRoses"]
name = "phaedra-escape-parser"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/PaleRoses/phaedra"
description = "Escape Sequence Parser"
license = "MIT"
documentation = "https://docs.rs/phaedra-escape-parser"
keywords = ["terminal", "escape", "parser"]

[dependencies]
base64 = {workspace = true, default-features=false, features=["alloc"]}
bitflags.workspace = true
hex = {workspace = true, default-features=false, features=["alloc"]}
image = {workspace =true, optional=true }
log.workspace = true
nix = { workspace=true, optional=true, features=["mman", "fs"] }
num-derive.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
pest = {workspace = true, optional=true}
pest_derive = {workspace = true, optional=true}
serde = {workspace=true, optional=true}
sha2 = {workspace=true, optional=true}
thiserror = {version = "2.0", default-features=false }
vtparse = {workspace = true, features=["alloc"]}
phaedra-blob-leases = {workspace=true, optional=true}
phaedra-color-types.workspace = true
phaedra-dynamic.workspace = true
phaedra-input-types = {workspace = true, default-features=false}

[features]
std = ["vtparse/std", "thiserror/std", "phaedra-input-types/std", "hex/std", "phaedra-dynamic/std"]
kitty-shm = ["dep:nix"]
use_serde = ["dep:serde", "phaedra-color-types/use_serde", "phaedra-blob-leases/serde", "bitflags/serde", "phaedra-input-types/serde"]
use_image = ["image", "dep:image"]
image = ["sha2", "phaedra-blob-leases"]
tmux_cc = ["dep:pest", "dep:pest_derive"]
docs = ["use_serde", "image", "tmux_cc", "kitty-shm"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
k9.workspace = true

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
