[package]
name = "phaedra-input-types"
version = "0.1.0"
authors = ["PaleRoses"]
edition = "2021"
repository = "https://github.com/PaleRoses/phaedra"
description = "config serialization for phaedra via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
euclid = {workspace = true, features = ["libm"]}
serde = {workspace=true, features = ["rc", "derive"], optional=true}
phaedra-dynamic = {workspace = true, optional = true}

[features]
default = ["dynamic"]
dynamic = ["dep:phaedra-dynamic"]
serde = ["dep:serde", "bitflags/serde"]
std = ["dynamic", "serde", "serde/std", "euclid/std"]
