[package]
name = "phaedra-mux-server-impl"
version = "0.1.0"
authors = ["PaleRoses"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-io.workspace = true
async_ossl.workspace = true
codec.workspace = true
config.workspace = true
dns-lookup.workspace = true
futures.workspace = true
hostname.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
rangeset.workspace = true
rcgen.workspace = true
smol.workspace = true
termwiz = { workspace=true, features=["use_serde"] }
url.workspace = true
phaedra-client.workspace = true
phaedra-term = { workspace=true, features=["use_serde"] }
