[package]
name = "phaedra-mux-server"
version = "0.1.0"
authors = ["PaleRoses"]
edition = "2018"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async_ossl.workspace = true
clap.workspace = true
config.workspace = true
env-bootstrap.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
mlua.workspace = true
openssl.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
umask.workspace = true
phaedra-blob-leases = {workspace=true, features=["simple_tempdir"]}
phaedra-mux-server-impl.workspace = true
phaedra-gui-subcommands.workspace = true
phaedra-term.workspace = true
