[package]
name = "phaedra-config-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/PaleRoses/phaedra"
description = "derive config metadata"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0", features = ["derive", "parsing", "extra-traits"] }
