[package]
name = "phaedra-dynamic-derive"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/PaleRoses/phaedra"
description = "config serialization for phaedra via dynamic json-like data values"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0", features = ["derive", "parsing", "extra-traits"] }
